fix background on overflown blame

--- a/src/main.css
+++ b/src/main.css
@@ -801,7 +801,7 @@
   .notifications-list .list-style-none.bg-gray {
     background: #1e1e1e !important;
   }
-  .blame-hunk, .blame-hunk .blob-num, .render-container {
+  .blame-hunk, .blame-hunk .blob-num, .render-container, .blob-wrapper {
     background-color: var(--ghd-code-background) !important;
   }
   .radio-label, [style*="background-color: #2f363d"],
